static/css/legacy.css
/* ... */
/* openlibrary/templates/lib/not_logged.html */
div#noLogin {
  margin-top: 10px;
  background: var(--light-yellow) url(/images/icons/icon_info.png) no-repeat
    10px 50%;
  padding: 10px 10px 10px 44px;
}

/* openlibrary/templates/type/author/view.html */
div#preMerge {
  min-height: 32px;
  padding: 10px 10px 10px 52px;
  background: transparent url(/images/icons/icon_merge.png) no-repeat 10px 10px;
}

/* openlibrary/templates/type/author/view.html */
div#postMerge {
  min-height: 32px;
  padding: 10px 10px 10px 52px;
  background: transparent url(/images/icons/icon_check.png) no-repeat 10px 10px;
}

/* openlibrary/templates/type/author/view.html */
div#errorMerge {
  min-height: 32px;
  padding: 10px 10px 10px 52px;
  background: transparent url(/images/icons/icon_alert.png) no-repeat 10px 10px;
}

/* FORMS */
div.formElement {
  padding-bottom: 8px;
}

div.formElement.bottom {
  padding-bottom: 0;
}

div.formElement label,
div.formElement select#date1,
div.formElement select#date2 {
  font-size: 0.75em;
}

div.formElement .input label {
  font-size: 1em;
}

div.formElement .footnote,
div.formElement p.tip {
  border-top: 1px solid var(--mid-grey);
  padding: 5px;
}

div.formElement blockquote {
  font-family: var(--font-family-quote);
  font-size: 0.875em;
  margin: 1em 40px;
}

fieldset {
  position: relative;
  padding: 0 0 20px;
  margin: 0 0 10px;
}

fieldset.minor {
  display: block;
  padding: 0;
  margin: 0;
}

fieldset.major legend {
  padding: 5px 0;
  font-family: var(--font-family-body);
  color: var(--teal);
  font-weight: 600;
  font-size: 1.375em;
}

fieldset.minor legend {
  font-family: var(--font-family-body);
  color: var(--teal);
  font-weight: 600;
  font-size: 1.125em;
}

fieldset.home {
  padding: 0;
  margin: 0;
  border: none;
}

fieldset.home legend {
  display: none;
}

/* ACCOUNT FORMS */
@import "components/page-heading-search-box.css";
@import "components/form.olform.css";

/* openlibrary/templates/account/notifications.html */
form#notifications input[type="radio"] {
  margin: 0 10px 0 20px;
}

/* openlibrary/templates/account/verify/failed.html */
/* openlibrary/templates/form.html */
/* FIXME: `div.valid` is possibly unused/or used in JS? */
div.invalid,
div.valid {
  float: left;
  font-size: 1em !important;
  font-family: var(--font-family-body);
  padding-top: 5px;
}

/* SEARCH FORMS */

/* openlibrary/templates/lists/home.html */
/* openlibrary/templates/search/advancedsearch.html */
/* openlibrary/templates/search/authors.html */
/* openlibrary/templates/search/inside.html */
/* openlibrary/templates/search/lists.html */
/* openlibrary/templates/search/publishers.html */
/* openlibrary/templates/work_search.html */
/* openlibrary/templates/search/subjects.html */
.search-row {
  margin-bottom: 8px;
}

div.siteSearch {
  overflow: visible;
  border-radius: 5px;
  width: 300px;
}

div.siteSearch.darker {
  -webkit-box-shadow: 1px 1px 10px var(--dark-grey);
  box-shadow: 1px 1px 10px var(--dark-grey);
}

div.siteSearch input[type="submit"] {
  padding: 11px;
  font-size: 0.9em;
  background: var(--link-blue);
  color: var(--white);
  border-radius: 5px;
  border: none;
}

div.siteSearch input[type="text"] {
  margin: 0;
  width: 215px;
  padding: 12px;
  border-radius: var(--border-radius-input);
  border: 1px solid var(--mid-grey);
}

/* openlibrary/templates/lists/home.html */
/* openlibrary/templates/search/advancedsearch.html */
/* openlibrary/templates/search/authors.html */
/* openlibrary/templates/search/inside.html */
/* openlibrary/templates/search/lists.html */
/* openlibrary/templates/search/publishers.html */
/* openlibrary/templates/search/subjects.html */
.siteSearch .formElement {
  font-family: var(--font-family-body);
  font-size: 1.1em;
}

/* openlibrary/templates/search/advancedsearch.html */
.searchPlus {
  font-family: var(--font-family-body);
  font-size: 0.75em;
  color: var(--dark-grey);
  padding: 15px 0;
}

.searchPlus a {
  margin-right: 20px;
}

/* DIALOGS */

/* openlibrary/macros/EditButtons.html */
div.cclicense {
  font-family: var(--font-family-body);
  font-size: 0.75em;
  min-height: 20px;
  padding: 3px 0 0 30px;
  color: var(--brown);
  margin-bottom: 12px;
  background: url(/images/logo_CC0-20px.png) 0 0 no-repeat;
}

/* TOOLS ACCORDION */
@import "components/edit-toolbar.css";

/* openlibrary/macros/databarDiff.html */
/* openlibrary/macros/databarEdit.html */
/* openlibrary/templates/recentchanges/header.html */
div.editButton button,
div#editHistory button,
div.revert.notice button {
  font-size: 1.125em;
}

/* openlibrary/templates/viewpage.html */
div#revertNotice {
  width: 958px;
  height: 45px;
  text-align: center;
  padding-top: 15px;
  background-color: var(--dark-green);
}

/* MESSAGING */
div.alert span,
div.verify span {
  margin: 0 auto;
  min-height: 25px;
  padding: 5px 0 5px 32px;
}

div.alert,
div.verify {
  font: 1.25em var(--font-family-body);
}

/* openlibrary/templates/account/verify/failed.html */
div.alert span {
  background: url(/images/icons/icon_alert.png) no-repeat;
}

div.verify span {
  background: url(/images/icons/icon_check.png) no-repeat;
}

/* openlibrary/templates/account/email/forgot-ia.html */
.defaultstyling {
  font-family: var(--font-family-body);
}

.defaultstyling .padtop {
  margin-top: 10px;
}

/* openlibrary/templates/account/email/forgot-ia.html */
.forgot-email {
  font-size: 0.8em;
}

.forgot-email-form {
  padding: 10px 0;
}

.forgot-email-form .form-row {
  margin-bottom: 10px;
}

.forgot-email-form label {
  font-family: var(--font-family-body);
  color: var(--dark-grey);
  font-weight: 600;
}

/* FOOTER */
@import "components/footer.css";

/* LANGUAGE DROPDOWN */
@import "components/language.css";

@import "components/link-box.css";

/* Various templates */
.contentQuarter {
  min-height: 100px;
  margin-bottom: 20px;
}

.contentTwothird {
  min-height: 100px;
  margin-bottom: 20px;
}

.contentTwothird p {
  margin-top: 0;
}
/* ... */

